--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,20 @@
 body{
     background-color: bisque;
 }
+/* Fixed navbar */
+nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
 .brand-logo img {
     max-height: 50px;
+}
+.nav-avatar{
+    max-height: 40px;
+    max-width: 40px;
+    border-radius: 50%;
 }
